FIX: test oddity